= Highlight CHANGELOG
:reproducible:
:sectanchors:
:sectnums!:
:toc-title: Contents
:toc: left
:toclevels: 1

== highlight 4.11

14.03.2024

 - updated astyle lib to version 3.4.13
 - updated java definition ((https://gitlab.com/saalen/highlight/-/issues/244)
 - updated solidity definition ((https://gitlab.com/saalen/highlight/-/issues/217)
 - fix backslash symbol in man page


== highlight 4.10

20.10.2023

 - updated astyle lib to version 3.4.10


== highlight 4.9

16.10.2023

 - updated astyle lib to version 3.4.9
 - added support for Elm (https://gitlab.com/saalen/highlight/-/issues/237)
 - added support for Factor (https://gitlab.com/saalen/highlight/-/issues/239)
 - added support for Cpp2
 - updated c.lang to include module keywords
 - fixed Lua nested string deprecation error (https://gitlab.com/saalen/highlight/-/issues/238)


== highlight 4.8

28.08.2023

 - updated astyle lib to version 3.4.6
 - moved old yaml.lang to yaml-ansible.lang and added a new yaml definition (https://gitlab.com/saalen/highlight/-/issues/235)
 - omit size property in BBCode output if `--fragment` is set (https://gitlab.com/saalen/highlight/-/issues/234)
 - allowed font size unit with `--font-size` for HTML and ODT output (https://gitlab.com/saalen/highlight/-/merge_requests/145/)
 - GUI: updated JP translation (https://gitlab.com/saalen/highlight/-/merge_requests/144)


== highlight 4.7

17.07.2023

  - updated astyle lib to version 3.4.1
  - CLI: fixed member variable initialization (https://gitlab.com/saalen/highlight/-/merge_requests/143)


== highlight 4.6

11.05.2023

  - added  `--service-mode` option to run highlight as long running process (https://gitlab.com/saalen/highlight/-/merge_requests/140)
  - added extras/highlight-service.py as an example for the service mode
  - updated astyle lib to version 3.3
  - W32: added  `--disable-echo` option (https://gitlab.com/saalen/highlight/-/merge_requests/140)